# OxiCloud

./: .claudeignore  .dockerignore  .gitattributes  .gitignore  .stylelintrc.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.rootless  PERFORMANCE_AUDIT.md  README.md  RELEASE_NOTES_v0.5.3.md  TODO-LIST.md  TODO-STORAGE-BACKENDS.prompt.md  bench.sh  biome.json  build.rs  docker-compose.wopi.yml  docker-compose.yml  entrypoint.sh  example.env  jsconfig.json  justfile
backup/: Cargo.toml  README.md  autoreparador-rust.py  corrector.sh  fix_localization_files.py  fix_php_migration_issues.py  repair-rust.sh  repair_progress.json
backup-mini/: Cargo.toml  Dockerfile  docker-compose.yml  generar_structura.sh
backup-mini/src/: main.rs
backup-mini/src/api/: auth.rs  files.rs  mod.rs  users.rs
backup-mini/src/core/: config.rs  db.rs  files.rs  mod.rs  users.rs
backup-mini/src/storage/: disk.rs  mod.rs  models.rs
backup-mini/src/ui/: assets.rs  auth.rs  files.rs  home.rs  mod.rs  templates.rs
backup-mini/src/utils/: auth.rs  errors.rs  logging.rs  mod.rs
backup-mini/templates/: base.html
backup-mini/templates/auth/: login.html  register.html
backup-mini/templates/error/: 404.html  500.html
backup-mini/templates/files/: details.html  index.html
backup-mini/templates/home/: index.html
backup-mini/templates/static/: main.css  main.js
backup/src/: cron.rs.bak  main.rs  remote.rs  status.rs.bak
backup/src/apps/files/: admin.rs.bak  download.rs.bak  index.rs.bak  mod.rs  settings.rs  triggerupdate.rs
backup/src/apps/files_encryption/: mod.rs
backup/src/apps/files_external/: mod.rs  personal.rs.bak  settings.rs
backup/src/apps/files_sharing/: mod.rs.bak  public.rs
backup/src/apps/files_trashbin/: download.rs  index.rs.bak  mod.rs
backup/src/apps/files_versions/: download.rs  mod.rs.bak
backup/src/apps/user_ldap/: group_ldap.rs  group_proxy.rs  mod.rs.bak  settings.rs.bak  user_ldap.rs  user_proxy.rs.bak
backup/src/apps/user_webdavauth/: mod.rs  settings.rs.bak  user_webdavauth.rs
backup/src/config/: config_dot_sample.rs  mod.rs.bak
backup/src/core/: minimizer.rs  mod.rs  register_command.rs.bak  routes.rs  setup.rs.bak  strings.rs.bak
backup/src/core/ajax/: appconfig.rs.bak  preview.rs.bak  share.rs  translations.rs.bak  update.rs
backup/src/core/avatar/: controller.rs
backup/src/core/command/: mod.rs  status.rs.bak
backup/src/core/js/: config.rs  mod.rs
backup/src/core/l10n/: ach.rs  ady.rs.bak  af.rs.bak  af_ZA.rs.bak  ar.rs  be.rs.bak  bg_BG.rs.bak  bn_BD.rs  bs.rs  ca.rs  cs_CZ.rs  cy_GB.rs  da.rs  de.rs  de_AT.rs  de_DE.rs.bak  el.rs.bak  en_at_pirate.rs  eo.rs.bak  es.rs.bak  es_MX.rs  et_EE.rs.bak  eu.rs  fa.rs.bak  fi.rs  fi_FI.rs  fr.rs  gl.rs  hi.rs  hr.rs  hu_HU.rs  hy.rs.bak  ia.rs.bak  id.rs.bak  ja_JP.rs  ka.rs.bak  ka_GE.rs  km.rs  ko.rs.bak  l10n_dash_en.rs  (+34 more)
backup/src/core/lostpassword/: controller.rs  mod.rs.bak
backup/src/core/tags/: controller.rs.bak
backup/src/core/templates/: 404.rs  error.rs.bak  installation.rs  layout_dot_user.rs  mod.rs  update_dot_admin.rs.bak  update_dot_user.rs
backup/src/lib/: autoloader.rs.bak  base.rs.bak  mod.rs.bak
backup/src/lib/l10n/: ach.rs.bak  af.rs  af_ZA.rs.bak  ar.rs  be.rs.bak  bg_BG.rs.bak  bs.rs  ca.rs.bak  cy_GB.rs  da.rs  de_CH.rs  de_DE.rs  en_GB.rs.bak  en_at_pirate.rs  eo.rs  es.rs.bak  es_MX.rs  fa.rs  fi.rs  fr.rs  gl.rs.bak  hi.rs  hr.rs.bak  hy.rs  id.rs  is.rs.bak  it.rs  ja_JP.rs.bak  ka.rs.bak  ka_GE.rs  km.rs  kn.rs  ko.rs.bak  lb.rs.bak  lv.rs  ml_IN.rs  mod.rs.bak  ms_MY.rs.bak  my_MM.rs.bak  ne.rs  (+24 more)
backup/src/lib/private/: allconfig.rs  api.rs  app.rs.bak  appconfig.rs.bak  apphelper.rs  avatar.rs  config.rs  contactsmanager.rs  davclient.rs  eventsource.rs  filechunking.rs  geo.rs.bak  helper.rs.bak  hintexception.rs  hook.rs  image.rs  installer.rs  json.rs.bak  mail.rs.bak  migrate.rs  mimetypes_dot_list.rs  mod.rs  navigationmanager.rs  notsquareexception.rs  preferences.rs  previewmanager.rs  request.rs  response.rs  route.rs  router.rs.bak  server.rs  subadmin.rs  tagmanager.rs.bak  templatelayout.rs.bak  updater.rs  urlgenerator.rs  util.rs
backup/src/lib/public/: api.rs.bak  app.rs  backgroundjob.rs  config.rs.bak  constants.rs  db.rs.bak  defaults.rs.bak  groupinterface.rs.bak  iaddressbook.rs.bak  icache.rs.bak  iconfig.rs  icontainer.rs.bak  idbconnection.rs.bak  ihelper.rs.bak  il10n.rs.bak  image.rs  inavigationmanager.rs  ipreview.rs  irequest.rs.bak  iservercontainer.rs  isession.rs  itagmanager.rs  itags.rs.bak  iurlgenerator.rs  iusersession.rs.bak  json.rs  mod.rs  response.rs.bak  share.rs.bak  template.rs  user.rs  userinterface.rs.bak  util.rs
backup/src/ocs/: mod.rs  routes.rs.bak  v1.rs
backup/src/search/ajax/: mod.rs.bak  search.rs
backup/src/search/templates/: mod.rs.bak  part_dot_results.rs.bak
backup/src/settings/: admin.rs  apps.rs.bak  help.rs.bak  languageCodes.rs  personal.rs  routes.rs.bak  settings.rs
backup/src/settings/ajax/: createuser.rs.bak  enableapp.rs.bak  getlog.rs.bak  lostpassword.rs  navigationdetect.rs.bak  setlanguage.rs  setloglevel.rs.bak  setquota.rs  setsecurity.rs  togglegroups.rs  updateapp.rs.bak  userlist.rs.bak
backup/src/settings/changepassword/: controller.rs
backup/src/settings/js/: apps_dash_custom.rs.bak  isadmin.rs  mod.rs.bak
backup/src/settings/l10n/: bg_BG.rs  bn_BD.rs.bak  ca.rs  cs_CZ.rs.bak  cy_GB.rs.bak  da.rs  de.rs.bak  de_AT.rs  de_CH.rs  de_DE.rs.bak  en_GB.rs  es.rs.bak  es_AR.rs  et_EE.rs  eu.rs.bak  fa.rs.bak  he.rs  hi.rs  hr.rs  hu_HU.rs.bak  hy.rs.bak  ia.rs.bak  id.rs  is.rs  it.rs  ja_JP.rs  ka.rs  lb.rs  lt_LT.rs  lv.rs  mod.rs.bak  my_MM.rs.bak  nb_NO.rs.bak  oc.rs  pa.rs.bak  pl.rs  pl_PL.rs  pt_BR.rs  pt_PT.rs.bak  ro.rs  (+17 more)
backup/src/settings/templates/: admin.rs  help.rs  mod.rs  oauth_dash_required_dash_apps.rs.bak  personal.rs  settings.rs
backup/src/tests/: apps.rs  bootstrap.rs  enable_all.rs  mod.rs  preseed_dash_config.rs
backup/src/tests/lib/: app.rs  autoloader.rs  avatar.rs  config.rs.bak  dbschema.rs.bak  geo.rs  l10n.rs  (+3 more)
(+2036 files in other folders)
