[package]
name = "oxicloud"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8.8", features = ["multipart", "http1", "tokio", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io", "codec"] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
bytes = "1.11.0"
tempfile = "3.24.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "compression-gzip", "trace", "cors", "add-extension", "request-id"] }
flate2 = "1.1.8"
zip = "2.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }
http-body = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures = "0.3.31"
async-stream = "0.3.6"
mime_guess = "2.0.5"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
reqwest = { version = "0.12.18", features = ["json", "multipart"] }
mockall = { version = "0.14.0", optional = true }
rand = "0.9.1"
pin-project-lite = "0.2.16"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "uuid", "json"] }
anyhow = "1.0.100"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
time = "0.3.46"
axum-server = "0.7.2"
hyper = { version = "1.8.1", features = ["full"] }
url = "2.5.8"
quick-xml = "0.39.0"
http-body-util = "0.1.3"
openssl = { version = "0.10.75", features = ["vendored"] }
icalendar = "0.17.6"
dotenv = "0.15.0"

[features]
default = []
test_utils = ["mockall"]
migrations = ["sqlx/migrate"]

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
required-features = ["migrations"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[profile.bench]
lto = "fat"
codegen-units = 1
opt-level = 3

