
[package]
name = "oxicloud"
version = "0.1.0"
edition = "2021"
authors = ["Dionisio Pozo"]
description = "Cloud made with Rust"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
actix-web = "4.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
log = "0.4.26"
env_logger = "0.11.6"
thiserror = "2.0.11"
anyhow = "1.0.96"
async-trait = "0.1.86"
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
tracing = "0.1.41"
dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4.4"
pretty_assertions = "1.4.1"
